@@ -27,8 +27,8 @@
  */
 
 // 0x00 HI ME LO
-// 00   00 06 00
-#define COCOS2D_VERSION 0x00000601
+// 00   00 06 02
+#define COCOS2D_VERSION 0x00000602
 
 //
 // all cocos2d include files
