@@ -29,13 +29,13 @@ DOXYFILE_ENCODING      = UTF-8
 # install the docset into Xcode, it will appear under the same "cocos2d-iphone" 
 # group but with the specific version. For example, the "cocos2d-iphone" group 
 # might contain "cocos2dforiPhone0.5.3", "cocos2dforiPhone0.6.0", etc.
-PROJECT_NAME           = cocos2d for iPhone 0.6.1
+PROJECT_NAME           = cocos2d for iPhone 0.6.2
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. 
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 0.6.1
+PROJECT_NUMBER         = 0.6.2
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
@@ -304,7 +304,7 @@ SYMBOL_CACHE_SIZE      = 0
 # Private class members and static file members will be hidden unless 
 # the EXTRACT_PRIVATE and EXTRACT_STATIC tags are set to YES
 
-EXTRACT_ALL            = NO
+EXTRACT_ALL            = YES
 
 # If the EXTRACT_PRIVATE tag is set to YES all private members of a class 
 # will be included in the documentation.
